Fix tittle visibility in Hero component

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -33,6 +33,7 @@
     -webkit-text-fill-color: transparent ;
     -webkit-background-clip: text ;
     background-clip: text;
+    display: inline-block;
 }
 
 .description {
